[gd_scene load_steps=16 format=3 uid="uid://bdydypuhg67jk"]

[ext_resource type="Script" uid="uid://vvrq4bl2oey7" path="res://scripts/entities/enemies/dinoskeleton.gd" id="1_vw6fa"]
[ext_resource type="Script" uid="uid://dcfoaiv83pvo4" path="res://scripts/utility/states/state_machine.gd" id="2_8j2wv"]
[ext_resource type="PackedScene" uid="uid://54ykpkl5wkh3" path="res://scenes/sub/DinoSpitProjectile.tscn" id="2_vpanr"]
[ext_resource type="Script" uid="uid://cj56h6cxt3f17" path="res://scripts/entities/enemies/states/dinoskeleton/dinoskeleton_idle.gd" id="3_8j2wv"]
[ext_resource type="PackedScene" uid="uid://i3dj6mon7uts" path="res://scenes/sub/DinoFireAOEAnticipation.tscn" id="3_vpanr"]
[ext_resource type="Script" uid="uid://u44buops71gi" path="res://scripts/entities/enemies/states/dinoskeleton/dinoskeleton_chase.gd" id="4_khv8b"]
[ext_resource type="PackedScene" uid="uid://donp4ngc2olym" path="res://scenes/sub/DinoFireAOE.tscn" id="4_y1oru"]
[ext_resource type="Script" uid="uid://bipkhqpq3tbpn" path="res://scripts/entities/enemies/states/dinoskeleton/dinoskeleton_spit_attack_commit.gd" id="5_m0ebu"]
[ext_resource type="Script" uid="uid://bfs0bu2rrif0m" path="res://scripts/entities/enemies/states/dinoskeleton/dinoskeleton_fire_attack_prepare.gd" id="6_qoxk8"]
[ext_resource type="PackedScene" uid="uid://pv4ghgiiejhk" path="res://scenes/dev/christian_d/enemy_status_bar.tscn" id="6_vsguo"]
[ext_resource type="Script" uid="uid://v72xfcwohkl2" path="res://scripts/entities/enemies/states/dinoskeleton/dinoskeleton_fire_attack_commit.gd" id="8_y1oru"]
[ext_resource type="PackedScene" uid="uid://dmob0laukrlcr" path="res://art_assets/enemies/skele_dino/DragoSkele.glb" id="9_qoxk8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2l4st"]
size = Vector3(1, 1.15, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vl86s"]
height = 1.15

[sub_resource type="ViewportTexture" id="ViewportTexture_45tao"]
viewport_path = NodePath("SubViewport")

[node name="DinoSkeleton" type="CharacterBody3D" node_paths=PackedStringArray("spit_source_node") groups=["Enemies"]]
collision_layer = 10
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vw6fa")
spit_source_node = NodePath("SpitSource")
spit_distance = 14.0
spit_projectile_scene = ExtResource("2_vpanr")
fire_distance = 6.0
fire_anticipation_scene = ExtResource("3_vpanr")
fire_effect_scene = ExtResource("4_y1oru")
vision_radius = 20.0
attack_radius = 10.0
_base_speed = 1.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_8j2wv")
metadata/_custom_type_script = "uid://dcfoaiv83pvo4"

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource("3_8j2wv")
metadata/_custom_type_script = "uid://cplhuefak4xe6"

[node name="chase" type="Node" parent="StateMachine"]
script = ExtResource("4_khv8b")
metadata/_custom_type_script = "uid://ccipy7c0880vt"

[node name="spit_attack_commit" type="Node" parent="StateMachine"]
script = ExtResource("5_m0ebu")
metadata/_custom_type_script = "uid://ccipy7c0880vt"

[node name="SpitAnimationTimer" type="Timer" parent="StateMachine/spit_attack_commit"]

[node name="fire_attack_prepare" type="Node" parent="StateMachine"]
script = ExtResource("6_qoxk8")
metadata/_custom_type_script = "uid://ccipy7c0880vt"

[node name="FireAnticipationTimer" type="Timer" parent="StateMachine/fire_attack_prepare"]
wait_time = 2.0

[node name="fire_attack_commit" type="Node" parent="StateMachine"]
script = ExtResource("8_y1oru")
metadata/_custom_type_script = "uid://ccipy7c0880vt"

[node name="SpitSource" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.65, -7.6)

[node name="DragoSkele" parent="." instance=ExtResource("9_qoxk8")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_2l4st")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 2.0
path_max_distance = 100.01
debug_path_custom_color = Color(0, 1, 0, 1)

[node name="AggroArea" type="Node3D" parent="."]
transform = Transform3D(20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="AggroArea"]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="AggroArea/Area3D"]
shape = SubResource("CylinderShape3D_vl86s")
debug_color = Color(1, 0, 0, 1)

[node name="SpitCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="StatusBars" parent="." instance=ExtResource("6_vsguo")]
transform = Transform3D(0.70710677, -0.4055798, 0.579228, 0, 0.81915206, 0.57357645, -0.70710677, -0.4055798, 0.579228, 0, 8.55703, 0)
texture = SubResource("ViewportTexture_45tao")

[connection signal="break_update" from="." to="StatusBars" method="update_break"]
[connection signal="health_update" from="." to="StatusBars" method="update_health"]
